[package]
name = "builder"
version = "0.1.0"
edition = "2021"

[dependencies]
ureq = { version = "2.10", features = ["tls"], default-features = false }
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
